--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -6,10 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Methods for Adding CSS</title>
     <link rel="stylesheet" href="style.css"/>
+    <style>
+     p { 
+       background-color: green;
+      color: white;
+      font-size: 18px 
+      }
+    </style>
   </head>
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
+    <button style="background-color: orange; font-size: 18px;">
     <button>Inline Method</button>
   </body>
 </html>
