--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -18,6 +18,6 @@
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
     <button style="background-color: orange; font-size: 18px;">
-    <button>Inline Method</button>
+    Inline Method</button>
   </body>
 </html>
